# nome

./: .gitignore  .travis.yml  CMakeLists.txt  Console.cpp  Console.h  DarkStyle.cpp  MacroExpander.cpp  MacroExpander.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NomeDocument.cpp  NomeDocument.h  PythonModule.cpp  PythonModule.h  README.md  appveyor.yml  commonDialogs.cpp  commonDialogs.h  controlpanel.cpp  controlpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  nomeglwidget.cpp  nomeglwidget.h  nomeparser.cpp  nomeparser.h
Scripting/: Console.cpp  Console.h  PythonModule.cpp  SceneBuilder.cpp  SceneBuilder.h
compilerBank/: lexerBank.cpp  parserBank.cpp  parserBank.hpp
compilerNome/: lexer.cpp  lexer.l  parser.cpp  parser.hpp  parser.y
compilerObj/: lexerObj.cpp  parserObj.cpp  parserObj.hpp  parserObj.y
compilerStl/: lexerStl.cpp  parserStl.cpp  parserStl.hpp  parserStl.y
darkstyle/: darkstyle.qss
docs/: generator_howto.md
glad/include/glad/: glad.h
glad/src/: glad.c
newNOME/: BSplineNew.cpp  BSplineNew.h  BankNew.cpp  ConsolidateWindow.cpp  ConsolidateWindow.h  Data.cpp  Data.h  GroupWindow.cpp  GroupWindow.h  InstanceNew.cpp  InstanceNew.h  MeshNew.cpp  MeshNew.h  PolylineNew.cpp  PolylineNew.h  Reader.cpp  Reader.h  Session.cpp  Session.h  SliderNew.cpp  SliderOffsetNew.cpp  SliderSubdivisionNew.cpp  Sweep.cpp  Sweep.h  TorusKnotNew.cpp  TorusKnotNew.h
